temp fix for checkbox alignment

--- a/app/assets/stylesheets/bootstrap_style_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_style_overrides.css.scss
@@ -136,6 +136,10 @@ h1, h2, h3, h4, h5 {
   margin-bottom: 1rem;
 }
 
+.checkbox {
+  padding-top: 7px;
+}
+
 .has-error {
   .col-form-label,
   .radio,
